static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Allura&family=Lato&display=swap');

/* 1. Base.html page and common to all pages */

body {
    background-color: #645132;
    font-family: 'Lato', sans-serif;
    letter-spacing: .5px;
}

a {
    text-decoration: none;
    color:white;
}

a:hover {
    color:#efd485;
}
/* 2. navbar */
.navbar {
    z-index: 10;
    color: #efd485;
    padding: 20px;
}

.nav-link {
    color: #efd485;
    padding: 20px;
}

#logo {
    font-family: 'Allura', cursive;
    color: #efd485;
    font-size: 60px;
    padding-left: 20px;
}

/* 3. hero image and text overlay */
#logo-text {
    font-family: 'Allura', cursive;
    font-size: 80px;
}


.hero-image {
    z-index: 2;
    padding-top: 60px;
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482089/static/images/hero.1f6443dea531.webp");
    height: 450px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: grid;
    position: relative;
    overflow: hidden;
}

.cover-text {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    overflow: hidden;
    background-size: cover !important;
    background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 37%, rgba(0, 0, 0, 0.65) 100%);
}

.cover-text-inner {
    text-align: center;
}
h1, h2, h3, h4, p  {
    color: #efd485;
}

h2 {
    font-size: 30px;
}

.btn {
    margin-top: 20px;
    color: #efd485;
    border-color: #efd485;
    background-color: #6c5736;
}

/* .card .btn:hover {
    background-color: #000 !important;
    color: #fff !important;
} */

.card p {
    color: black;
}

form {
    color: #efd485;
}

/*  4. Footer */
footer {
    border-top: 1px solid #efd485;
}

.footer-logo {
    color: #efd485;
}

.footer-font {
    color: #efd485;
    font-family: "Allura", cursive;
    font-size: 30px;
}

.footer-font-two {
    font-family: "Lato", sans-serif;
    font-size: 20px;
}

/* 5. menus.html page */

.menus {
    padding-top: 20px;
    display: flex;
    justify-content: center;
}


.card {
    background: #efd485;
    padding: 20px;
}

p.card-text {
    color: black;
}

#customForm {
    background-color: #efd485;
}


.wine-img {
    max-width:80%; 
   
}

.quotes {
    font-size: 16px;
}

form {
    max-width: 600px;
} 

.menu-page {
    max-width: 600px;
}

